# example_canopy_app

./: .clang-format  .cmake-format.yaml  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
idl/: CMakeLists.txt
idl/greeting/: greeting.idl
src/: client.cpp  server.cpp
